--- a/framework/core/less/common/root.less
+++ b/framework/core/less/common/root.less
@@ -44,7 +44,7 @@
   }
 
   // ---------------------------------
-  // COMPONENTS
+  // COMPONENT COLORS
 
   --header-bg:                     @header-bg;
   --header-color:                  @header-color;
@@ -131,4 +131,10 @@
   @media @tablet { --flarum-screen: tablet; }
   @media @desktop { --flarum-screen: desktop; }
   @media @desktop-hd { --flarum-screen: desktop-hd; }
+
+  // ---------------------------------
+  // COMPONENT LAYOUTS
+
+  --avatar-column-width: 85px;
+  --post-padding: 20px;
 }
