--- a/framework/core/less/forum/DiscussionPage.less
+++ b/framework/core/less/forum/DiscussionPage.less
@@ -34,7 +34,6 @@
 
       &-content {
         margin-top: 10px;
-        margin-inline-start: -20px;
       }
 
       &-sidebar {
